statum-macros/tests/ui/invalid_state_cfg_payload_field.stderr
error: Error: #[state] enum `WorkflowState` variant `Review` field `priority` uses `#[cfg_attr]`, but Statum does not support conditionally compiled state payload fields.
       Fix: move the cfg gate to the whole variant or wrap cfg-specific payload shape behind a separate type.
  --> tests/ui/invalid_state_cfg_payload_field.rs:17:9
   |
17 | /         #[cfg_attr(any(), allow(dead_code))]
18 | |         priority: u8,
   | |____________________^

error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/ui/invalid_state_cfg_payload_field.rs:20:2
   |
20 | }
   |  ^ consider adding a `main` function to `$DIR/tests/ui/invalid_state_cfg_payload_field.rs`
